pressure sensor working as well as initial work for digital pot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,9 @@ target_link_libraries(DustAndTempSenderWiringPi ${wiringPi_LIB})
 
 add_executable(DustAndTempSenderPigs src/pigs.cpp)
 target_link_libraries(DustAndTempSenderPigs pigpio pthread)
+
+add_executable(McpComm src/digipot.cpp)
+target_link_libraries(McpComm pigpio pthread)
+
+add_executable(mprls src/mprlsRead.cpp DS18B20/src/DS18B20.cpp)
+target_link_libraries(mprls pigpio pthread)
