--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "influxdb_cpp"]
 	path = influxdb_cpp
 	url = https://github.com/orca-zhang/influxdb-cpp.git
+[submodule "DS18B20"]
+	path = DS18B20
+	url = https://github.com/TeraHz/DS18B20
